Optimización del sidebar

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -335,6 +335,13 @@
           }
         }
       }
+    },
+    "SETTINGS": {
+      "TEXT": "Configuraciones",
+      "LIST": {
+        "CAMPUS": "Sedes",
+        "PRODUCT": "Producto"
+      }
     }
   }
 }
