--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -333,6 +333,13 @@
           }
         }
       }
+    },
+    "SETTINGS": {
+      "TEXT": "Configuraciones",
+      "LIST": {
+        "CAMPUS": "Sedes",
+        "PRODUCT": "Producto"
+      }
     }
   }
 }
