Componente de estado añadidos

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -257,5 +257,11 @@
         "PERMISSION_ACCOUNT": "Permisos de usuario"
       }
     }
+  },
+  "FORMS": {
+    "USER": {
+      "TITLE": "Usuario",
+      "LABEL": ""
+    }
   }
 }
