Implementación de ventas documentos, historial, comentarios

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -593,6 +593,10 @@
         "label": "Abreviación",
         "placeholder": "Ingrese la abreviación..."
       },
+      "comment": {
+        "label": "Comentario",
+        "placeholder": "Ingrese el comentario..."
+      },
       "search": {
         "label": "Buscar",
         "placeholder": "Escriba aquí..."
