Conctactos, Direcciones, Cuentas bancarias agregados para clientes

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -758,6 +758,7 @@
       "REGISTER": "Registrar",
       "UPDATE": "Actualizar",
       "SAVE": "Guardar",
+      "SAVE_CHANGE": "Guardar cambios",
       "DELETE": "Eliminar",
       "RESET": "Resetear",
       "PREV": "Anterior",
