nuevos cambios en edit venta

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -791,6 +791,7 @@
       "ADD": "Registrar",
       "UPDATE": "Actualizar",
       "DELETE": "Eliminar",
+      "BACK": "Volver",
       "PREV": "Anterior",
       "NEXT": "Siguiente",
       "CLOSE": "Cerrar",
