mejoras en producto, servicio y detalle de la venta

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -499,7 +499,8 @@
       "product_type": {
         "label": "Tipo de Producto",
         "placeholder": "Ingrese el tipo de producto...",
-        "default_option": "Seleccione un tipo de producto..."
+        "default_option": "Seleccione un tipo de producto...",
+        "default_option_all": "Todos"
       },
       "promotion": {
         "label": "Promoción",
